[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/graphics/sheet-1.png" type="Texture" id=1]
[ext_resource path="res://scenes/tiles/locked_tile.gd" type="Script" id=2]

[node name="locked_tile" type="Node2D"]
script = ExtResource( 2 )

[node name="tile_container" type="Node2D" parent="."]

[node name="lock" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 176, 8, 8, 8 )

[node name="unlock_timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="unlock_timer" to="." method="_on_unlock_timer_timeout"]
